fixed ros2:galactic containers' confliction.

--- a/ansible/roles/ros2/tasks/main.yml
+++ b/ansible/roles/ros2/tasks/main.yml
@@ -25,6 +25,7 @@
 - name: Get DEB architecture
   shell: dpkg --print-architecture
   register: deb_architecture
+  when: ros2_latest_list.stat.exists == false
 
 # echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/ros2.list > /dev/null
 - name: ROS2 (add source list)
@@ -33,6 +34,7 @@
     state: present
     update_cache: true
   become: true
+  when: ros2_latest_list.stat.exists == false
 
 - name: ROS2 (install ros-{{ rosdistro }}-{{ package }})
   apt:
