feature: add setenv templates (#8)
* feature: add setenv templates

Signed-off-by: Takayuki AKAMINE <takayuki.akamine@tier4.jp>

* Update caret_topic_filter.bash.jinja2

* fixed ros2:galactic containers' confliction.

* fixed ros2:galactic containers' confliction.

* fixed ros2:galactic containers' confliction.

--- a/ansible/roles/caret/tasks/main.yml
+++ b/ansible/roles/caret/tasks/main.yml
@@ -1,6 +1,27 @@
+- name: ROS2 (check rosdep file)
+  stat:
+    path: /etc/ros/rosdep/sources.list.d/20-default.list
+  register: ros_repository
+
+- name: ROS2 (install rosdep)
+  apt:
+    name: python3-rosdep
+    state: latest
+    update_cache: true
+  become: true
+
+- name: ROS2 (initialize rosdep)
+  command: rosdep init
+  when: ros_repository.stat.exists == false
+  become: true
+
+- name: ROS2 (update rosdep)
+  command: rosdep update
+  become: false
+
 - name: caret (rosdep install dependencies)
   shell: |
-    rosdep install -y --from-paths src --ignore-src --rosdistro {{ rosdistro }} -y --skip-keys "console_bridge fastcdr fastrtps rti-connext-dds-5.3.1 urdfdom_headers"
+    rosdep install -y --from-paths src --ignore-src --rosdistro {{ rosdistro }} -y --skip-keys "{{ targeted_skip_keys }}"
   args:
     chdir: "{{ WORKSPACE_ROOT }}"
 
@@ -31,3 +52,17 @@
     dest: "{{ WORKSPACE_ROOT }}/src/ros2/rclcpp/rclcpp/include/rclcpp_lifecycle"
     state: link
     force: true
+
+- name: caret (copy CARET setenv template as reference)
+  ansible.builtin.template:
+    src: "{{ setenv_caret_script_template }}"
+    dest: "{{ WORKSPACE_ROOT }}/setenv_caret.bash"
+    mode: 0755
+  become: false
+
+- name: caret (copy topic filter as reference)
+  ansible.builtin.template:
+    src: "{{ caret_topic_filter_template }}"
+    dest: "{{ WORKSPACE_ROOT }}/caret_topic_filter.bash"
+    mode: 0755
+  become: false
