chore: refactoring ansible and README.md (#7)
* chore: refactoring ansible and README.md

* feature: add setenv templates (#8)

* feature: add setenv templates

Signed-off-by: Takayuki AKAMINE <takayuki.akamine@tier4.jp>

* Update caret_topic_filter.bash.jinja2

* fixed ros2:galactic containers' confliction.

* fixed ros2:galactic containers' confliction.

* fixed ros2:galactic containers' confliction.

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,6 +1,9 @@
----
 - hosts: localhost
   connection: local
-  become: no
+  become: false
   roles:
-    - { role: caret, tags: ["caret"] }
+    - { role: lttng, tags: [lttng] }
+    - { role: ros2, rosdistro: galactic, tags: [ros2] }
+    - { role: ros-tracing, rosdistro: galactic, tags: [ros-tracing] }
+    - { role: visualizer, tags: [visualizer] }
+    - { role: caret, rosdistro: galactic, tags: [caret] }
