Add tqdm installation

--- a/ansible/roles/visualizer/tasks/main.yml
+++ b/ansible/roles/visualizer/tasks/main.yml
@@ -17,6 +17,7 @@
       - jupyterlab
       - graphviz
       - colorcet
+      - tqdm
     executable: pip3
     extra_args: --ignore-installed
   become: true
