--- a/ansible/roles/ros2/defaults/main.yml
+++ b/ansible/roles/ros2/defaults/main.yml
@@ -1,4 +1,4 @@
-rosdistro: galactic
+rosdistro: humble
 package: desktop
 repository: http://packages.ros.org/ros2/ubuntu
 keyserver: https://raw.githubusercontent.com/ros/rosdistro/master/ros.key
