refactor: install packages using pip according to the requirements.txt and package.xml
Signed-off-by: bopeng-saitama <peng.b.203@ms.saitama-u.ac.jp>

--- a/ansible/roles/caret/tasks/main.yml
+++ b/ansible/roles/caret/tasks/main.yml
@@ -21,7 +21,15 @@
 
 - name: caret (rosdep install dependencies)
   shell: |
-    rosdep install -y --from-paths src --ignore-src --rosdistro {{ rosdistro }} -y --skip-keys "{{ targeted_skip_keys }}"
+    rosdep install -y --from-paths ./ --ignore-src --rosdistro {{ rosdistro }} -y --skip-keys "{{ targeted_skip_keys }}"
+  args:
+    chdir: "{{ WORKSPACE_ROOT }}"
+
+- name: caret (install python module)
+  pip:
+    requirements: requirements.txt
+    executable: pip3
+  become: true
   args:
     chdir: "{{ WORKSPACE_ROOT }}"
 
