refactor: install packages using pip according to the requirements.txt and package.xml
Signed-off-by: bopeng-saitama <peng.b.203@ms.saitama-u.ac.jp>

--- a/ansible/roles/caret/tasks/main.yml
+++ b/ansible/roles/caret/tasks/main.yml
@@ -27,7 +27,7 @@
 
 - name: caret (install python module)
   pip:
-    requirements: requirements.txt
+    requirements: "{{ requirments_path }}"
     executable: pip3
   become: true
   args:
