fix:fix spell error
Signed-off-by: bopeng-saitama <peng.b.203@ms.saitama-u.ac.jp>

--- a/ansible/roles/ros-tracing/tasks/main.yml
+++ b/ansible/roles/ros-tracing/tasks/main.yml
@@ -7,7 +7,7 @@
 
 - name: install some python modules for caret
   pip:
-    requirements: "{{ requirments_path }}"
+    requirements: "{{ requirements_path }}"
     executable: pip3
   become: true
   args:
