--- a/ansible/roles/caret/tasks/main.yml
+++ b/ansible/roles/caret/tasks/main.yml
@@ -27,7 +27,7 @@
 
 - name: caret (install python module)
   pip:
-    requirements: "{{ requirments_path }}"
+    requirements: "{{ requirements_path }}"
     executable: pip3
   become: true
   args:
