fix: fix build error

--- a/ansible/roles/caret/tasks/main.yml
+++ b/ansible/roles/caret/tasks/main.yml
@@ -21,9 +21,19 @@
 
 - name: caret (rosdep install dependencies)
   shell: |
-    rosdep install -y --from-paths ./ --ignore-src --rosdistro {{ rosdistro }} -y --skip-keys "{{ targeted_skip_keys }}"
+    rosdep install -y --from-paths src --ignore-src --rosdistro {{ rosdistro }} -y --skip-keys "{{ targeted_skip_keys }}"
   args:
     chdir: "{{ WORKSPACE_ROOT }}"
+  
+- name: caret (install some packages for build)
+  apt:
+    name:
+      - ros-{{ rosdistro }}-osrf-testing-tools-cpp
+      - ros-{{ rosdistro }}-performance-test-fixture
+      - ros-{{ rosdistro }}-mimick-vendor
+      - ros-{{ rosdistro }}-test-msgs
+      - ros-{{ rosdistro }}-cyclonedds
+  become: true
 
 - name: caret (install python module)
   pip:
