--- a/ansible/roles/caret/defaults/main.yml
+++ b/ansible/roles/caret/defaults/main.yml
@@ -2,3 +2,4 @@ rosdistro: galactic
 targeted_skip_keys: console_bridge fastcdr fastrtps rti-connext-dds-5.3.1 urdfdom_headers
 setenv_caret_script_template: setenv_caret.bash.jinja2
 caret_topic_filter_template: caret_topic_filter.bash.jinja2
+requirements_path: requirements.txt
