--- a/ansible/roles/ros-tracing/tasks/main.yml
+++ b/ansible/roles/ros-tracing/tasks/main.yml
@@ -2,35 +2,16 @@
   apt:
     name:
       - build-essential
-      - cmake
-      - git
-      - python3-colcon-common-extensions
-      - python3-flake8
-      - python3-pytest-cov
-      - python3-rosdep
-      - python3-setuptools
-      - python3-vcstool
       - python3-bt2
-      - wget
   become: true
 
 - name: install some python modules for caret
   pip:
-    name:
-      - flake8-blind-except
-      - flake8-builtins
-      - flake8-class-newline
-      - flake8-comprehensions
-      - flake8-deprecated
-      - flake8-docstrings
-      - flake8-import-order
-      - flake8-quotes
-      - pytest-repeat
-      - pytest-rerunfailures
-      - pytest
-      - setuptools
+    requirements: "{{ requirements_path }}"
     executable: pip3
   become: true
+  args:
+    chdir: "{{ WORKSPACE_ROOT }}"
 
 - name: Install ros-tracing
   apt:
