add_version_check_in_setup_bash (#13)
* mod: branch to v0.3 related repositories.

Signed-off-by: hsgwa <hasegawa.isp@gmail.com>

* chore: add_ros2caret_to_repos

Signed-off-by: atsushi421 <a.yano.578@ms.saitama-u.ac.jp>

* add: branch selection

Signed-off-by: hsgwa <hasegawa.isp@gmail.com>

* add_version_check_in_setup_bash

* change_cat_to_source

* read_playbook_by_setup

* fix_regex_pattern_and_ansible

* update_ansible_role

* fix_regex

* fix_grep_command

* fix_grep_command

* fix: fixed output message

* add line

* revert caret.repos

Co-authored-by: hsgwa <hasegawa.isp@gmail.com>
Co-authored-by: atsushi421 <a.yano.578@ms.saitama-u.ac.jp>
Co-authored-by: hsgwa <19860128+hsgwa@users.noreply.github.com>
Co-authored-by: Takayuki AKAMINE <takayuki.akamine@tier4.jp>
Co-authored-by: Takayuki AKAMINE <38586589+takam5f2@users.noreply.github.com>

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -6,4 +6,4 @@
     - { role: ros2, rosdistro: galactic, tags: [ros2] }
     - { role: ros-tracing, rosdistro: galactic, tags: [ros-tracing] }
     - { role: visualizer, tags: [visualizer] }
-    - { role: caret, rosdistro: galactic, tags: [caret] }
+    - { role: caret, rosdistro: galactic, ubuntu_version: 20.04, tags: [caret] }
