chore(ci): add semantic-pull-request.yaml
Signed-off-by: Takayuki AKAMINE <takayuki.akamine@tier4.jp>

--- a/.github/sync-files.yaml
+++ b/.github/sync-files.yaml
@@ -3,6 +3,7 @@
     - source: .github/dependabot.yaml
     - source: .github/workflows/pre-commit.yaml
     - source: .github/workflows/pre-commit-optional.yaml
+    - source: .github/workflows/semantic-pull-request.yaml
     - source: .github/workflows/spell-check-differential.yaml
     - source: .github/workflows/sync-files.yaml
     - source: .markdown-link-check.json
