ci: add .cspell.json. to be synchronized
Signed-off-by: Takayuki AKAMINE <takayuki.akamine@tier4.jp>

--- a/.github/sync-files.yaml
+++ b/.github/sync-files.yaml
@@ -12,3 +12,7 @@
     - source: .prettierignore
     - source: .prettierrc.yaml
     - source: .yamllint.yaml
+
+- repository: tier4/caret_common
+  files:
+    - source: .cspell.json
