docs: fix issue template
Signed-off-by: takeshi.iwanari <takeshi.iwanari@tier4.jp>

--- a/.github/ISSUE_TEMPLATE/issue.yaml
+++ b/.github/ISSUE_TEMPLATE/issue.yaml
@@ -115,6 +115,14 @@ body:
       required: false
 
   - type: textarea
+    id: lttng_trace_log_file
+    attributes:
+      label: LTTng trace log file
+      description: If applicable, add LTTng trace log file stored in '~/.ros/tracing/'
+    validations:
+      required: false
+
+  - type: textarea
     id: screenshots
     attributes:
       label: Screenshots
