disable build on pull_request. add badges
Signed-off-by: takeshi.iwanari <takeshi.iwanari@tier4.jp>

--- a/.github/workflows/build_autoware.yaml
+++ b/.github/workflows/build_autoware.yaml
@@ -3,7 +3,7 @@ name: Build with Autoware
 on:
   schedule:
     - cron: 0 17 * * * # run at 2 AM JST
-  pull_request:
+  # pull_request:
   workflow_dispatch:
 
 jobs:
