chore(ansible): add query to install packages
Signed-off-by: Takayuki AKAMINE <takayuki.akamine@tier4.jp>

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,9 +1,15 @@
 - hosts: localhost
   connection: local
   become: false
+  vars_prompt:
+    - name: package_install
+      prompt: "Would you like to install the require packages[y/n]"
+      default: "y"
+      private: false
+
   roles:
-    - { role: lttng, tags: [lttng] }
-    - { role: ros2, rosdistro: humble, tags: [ros2] }
-    - { role: ros-tracing, rosdistro: humble, tags: [ros-tracing] }
-    - { role: visualizer, tags: [visualizer] }
+    - { role: lttng, tags: [lttng], when: package_install == 'y' }
+    - { role: ros2, rosdistro: humble, tags: [ros2], when: package_install == 'y' }
+    - { role: ros-tracing, rosdistro: humble, tags: [ros-tracing], when: package_install == 'y' }
+    - { role: visualizer, tags: [visualizer], when: package_install == 'y' }
     - { role: caret, rosdistro: humble, ubuntu_version: 22.04, tags: [caret] }
