--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,9 +1,19 @@
 - hosts: localhost
   connection: local
   become: false
+  vars_prompt:
+    - name: package_install
+      prompt: Would you like to install the require packages[y/n]
+      default: y
+      private: false
+  pre_tasks:
+    - name: Verify OS
+      ansible.builtin.fail:
+        msg: Only Ubuntu 22.04 is supported for this branch. Please refer to https://tier4.github.io/CARET_doc/latest/installation/installation/
+      when: ansible_distribution_version != '22.04'
+
   roles:
-    - { role: lttng, tags: [lttng] }
-    - { role: ros2, rosdistro: humble, tags: [ros2] }
-    - { role: ros-tracing, rosdistro: humble, tags: [ros-tracing] }
-    - { role: visualizer, tags: [visualizer] }
-    - { role: caret, rosdistro: humble, ubuntu_version: 22.04, tags: [caret] }
+    - { role: lttng, tags: [lttng], when: package_install == 'y' }
+    - { role: ros-tracing, rosdistro: humble, tags: [ros-tracing], when: package_install == 'y' }
+    - { role: visualizer, tags: [visualizer], when: package_install == 'y' }
+    - { role: caret, rosdistro: humble, tags: [caret] }
