--- a/.github/workflows/build_autoware.yaml
+++ b/.github/workflows/build_autoware.yaml
@@ -25,7 +25,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v4
         with:
-          context: ./docker
+          context: ./
           file: ./docker/build_autoware.dockerfile
           push: false
           tags: caret/caret_autoware:latest
