--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -17,3 +17,4 @@
     - { role: ros-tracing, rosdistro: humble, tags: [ros-tracing], when: package_install == 'y' }
     - { role: visualizer, tags: [visualizer], when: package_install == 'y' }
     - { role: caret, rosdistro: humble, tags: [caret] }
+    - { role: cyclonedds, rosdistro: humble, tags: [cyclonedds] }
