--- a/.github/workflows/build_autoware.yaml
+++ b/.github/workflows/build_autoware.yaml
@@ -14,18 +14,7 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Update Docker image
-        run: docker pull osrf/ros:humble-desktop
-
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v5
-        with:
-          context: ./
-          file: ./docker/build_autoware.dockerfile
-          push: false
-          tags: caret/caret_autoware:latest
+      - name: Docker Build
+        run: |
+          docker pull osrf/ros:humble-desktop
+          docker image build --no-cache=true -t caret/caret_autoware:latest -f ./docker/build_autoware.dockerfile ./
