update ros distribution
Signed-off-by: ymski <114902604+ymski@users.noreply.github.com>

--- a/ansible/playbook_iron.yml
+++ b/ansible/playbook_iron.yml
@@ -14,7 +14,7 @@
 
   roles:
     - { role: lttng, tags: [lttng], when: package_install == 'y' }
-    - { role: ros-tracing, rosdistro: humble, tags: [ros-tracing], when: package_install == 'y' }
+    - { role: ros-tracing, rosdistro: iron, tags: [ros-tracing], when: package_install == 'y' }
     - { role: visualizer, tags: [visualizer], when: package_install == 'y' }
-    - { role: caret, rosdistro: humble, tags: [caret] }
-    - { role: cyclonedds, rosdistro: humble, tags: [cyclonedds] }
+    - { role: caret, rosdistro: iron, tags: [caret] }
+    - { role: cyclonedds, rosdistro: iron, tags: [cyclonedds] }
