added lttng role to playbook for iron
Signed-off-by: ymski <114902604+ymski@users.noreply.github.com>

--- a/ansible/playbook_iron.yml
+++ b/ansible/playbook_iron.yml
@@ -13,6 +13,7 @@
       when: ansible_distribution_version != '22.04'
 
   roles:
+    - { role: lttng, tags: [lttng], when: package_install == 'y' }
     - { role: ros-tracing, rosdistro: iron, tags: [ros-tracing], when: package_install == 'y' }
     - { role: visualizer, tags: [visualizer], when: package_install == 'y' }
     - { role: caret_iron, rosdistro: iron, tags: [caret] }
