feat: support iron (#175)
* added repos for iron

Signed-off-by: ymski <114902604+ymski@users.noreply.github.com>

* added installation files for iron

Signed-off-by: ymski <114902604+ymski@users.noreply.github.com>

* add setup shell for iron

Signed-off-by: ymski <114902604+ymski@users.noreply.github.com>

* update ros distribution

Signed-off-by: ymski <114902604+ymski@users.noreply.github.com>

* update ros distribution

Signed-off-by: ymski <114902604+ymski@users.noreply.github.com>

* update humble to iron

Signed-off-by: ymski <114902604+ymski@users.noreply.github.com>

* remove redundant setup files

Signed-off-by: ymski <114902604+ymski@users.noreply.github.com>

* install latest lttng to avoid version mispatching

Signed-off-by: ymski <114902604+ymski@users.noreply.github.com>

* install latest to avoid version mispatching

Signed-off-by: ymski <114902604+ymski@users.noreply.github.com>

* add -d option

Signed-off-by: ymski <114902604+ymski@users.noreply.github.com>

* ci(pre-commit): autofix

* integrate setup scripts

Signed-off-by: ymski <114902604+ymski@users.noreply.github.com>

* fix shell check

Signed-off-by: ymski <114902604+ymski@users.noreply.github.com>

* fix shell check

Signed-off-by: ymski <114902604+ymski@users.noreply.github.com>

* added lttng role to playbook for iron

Signed-off-by: ymski <114902604+ymski@users.noreply.github.com>

* fix condition

Signed-off-by: ymski <114902604+ymski@users.noreply.github.com>

* ci(pre-commit): autofix

* ignore nchd

Signed-off-by: ymski <114902604+ymski@users.noreply.github.com>

---------

Signed-off-by: ymski <114902604+ymski@users.noreply.github.com>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>

--- a/ansible/roles/lttng/tasks/main.yml
+++ b/ansible/roles/lttng/tasks/main.yml
@@ -9,6 +9,7 @@
     name:
       - lttng-tools
       - liblttng-ust-dev
+    state: latest
   become: true
 
 - name: LTTng (install babeltrace)
@@ -16,4 +17,5 @@
     name:
       - python3-babeltrace
       - python3-lttng
+    state: latest
   become: true
