--- a/ansible/roles/caret_iron/tasks/main.yml
+++ b/ansible/roles/caret_iron/tasks/main.yml
@@ -39,7 +39,7 @@
   pip:
     requirements: "{{ requirements_path }}"
     executable: pip3
-  become: true
+  become: false
   args:
     chdir: "{{ WORKSPACE_ROOT }}"
 
