--- a/ansible/roles/visualizer/tasks/main.yml
+++ b/ansible/roles/visualizer/tasks/main.yml
@@ -4,7 +4,7 @@
       - graphviz
       - graphviz-dev
     update_cache: true
-  become: true
+  become: false
 
 - name: Install caret dependent packages
   pip:
