Fixed iron to include EOL in rosdep updates because it was EOL.
Signed-off-by: ISP akm <akm@isp.co.jp>

--- a/ansible/roles/caret_iron/tasks/main.yml
+++ b/ansible/roles/caret_iron/tasks/main.yml
@@ -16,7 +16,7 @@
   become: true
 
 - name: ROS2 (update rosdep)
-  command: rosdep update
+  command: rosdep update --include-eol-distros
   become: false
 
 - name: caret (rosdep install dependencies)
