--- a/.github/workflows/build_autoware.yaml
+++ b/.github/workflows/build_autoware.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: 🧹 Clean up disk space before build
+      - name: Clean up disk space before build
         run: |
           echo "Disk usage before cleanup:"
           df -h
