--- a/.github/workflows/build_autoware.yaml
+++ b/.github/workflows/build_autoware.yaml
@@ -46,6 +46,11 @@ jobs:
           docker pull osrf/ros:humble-desktop
           docker image build --no-cache=true -t caret/caret_autoware:latest -f ./docker/build_autoware.dockerfile ./
 
+      - name: Analyze Docker Image Size
+        run: |
+          echo "--- Docker Image Layer Sizes ---"
+          docker history caret/caret_autoware:latest
+
       - name: 3. Measure disk usage AFTER build
         run: |
           echo "--- TOP 10 DIRS AFTER BUILD ---"
@@ -55,3 +60,4 @@ jobs:
           echo "--- TOP 10 /usr AFTER BUILD ---"
           sudo du -h /usr/ | sort -rh | head -10
           df -h # after build
+
